# tetrakis-sim

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bad.20251227_232504  Dockerfile  LICENSE  PATCH_NOTES.md  README.md  geodesic_bending_demo.ipynb  lattice_sim.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.py  spacetime.py
.github/workflows/: docker.yml  docs.yml  tests.yml
benchmarks/: bench_2d_after.csv  bench_2d_before.csv  bench_3d_after.csv  bench_3d_before.csv
docs/: PROJECT_REVIEW.md  architecture_extensibility.md  code_review.md  conf.py  deep_dive.md  index.md  model_and_validation.md  performance.md
examples/: helix_demo.py  naked_singularity_sweep.py  ulam_diagonal_helix_demo.py  ulam_diagonal_helix_lastdigit_demo.py
notebooks/: 03-tetrakis-3d-demo.ipynb  blackhole-demo-2.ipynb  blackhole_demo.ipynb  explore_tetrakis.ipynb  geodesic_bending_demo.ipynb  naked_singularity_demo.ipynb  tetrakis_blackhole_waves.ipynb  tetrakis_geodesic_demo.ipynb
scripts/: bench_wave.py  run_batch.py  run_sim.py
tests/: test_bench_wave_smoke.py  test_cli_kick.py  test_evals_cli.py  test_evals_llm_export.py  test_evals_smoke.py  test_invariants.py  test_lattice.py  test_model_validation_invariants.py  test_physics.py  test_physics_mass_potential.py  test_plot.py  test_prime_helix.py  test_registry_scaffold.py  test_singularity_defect.py  test_ulam.py
tetrakis_sim/: __init__.py  batch.py  cli.py  cli.py.bak.20251227_230707  curvature.py  defects.py  defects.py.bak.20251227_230707  lattice.py  physics.py  plot.py  plot.py.bak.20251227_230707  prime_helix.py  registry.py  ulam.py
tetrakis_sim/evals/: __init__.py  baseline.py  cli.py  dataset.py  features.py  llm_export.py
